--- a/SafeDriver/platforms/android/res/xml/config.xml
+++ b/SafeDriver/platforms/android/res/xml/config.xml
@@ -1,5 +1,5 @@
 <?xml version='1.0' encoding='utf-8'?>
-<widget android-packageName="appinventor.ai_isaac.DriveSafe" android-versionCode="200" id="io.cordova.helloCordova" ios-CFBundleIdentifier="info.scoreonline.DriveSafe" ios-CFBundleVersion="26" version="2.0" windows-packageVersion="2.0" xmlns="http://www.w3.org/ns/widgets" xmlns:android="http://schemas.android.com/apk/res/android" xmlns:gap="http://phonegap.com/ns/1.0">
+<widget android-packageName="appinventor.ai_isaac.DriveSafe" android-versionCode="170" id="io.cordova.helloCordova" ios-CFBundleIdentifier="info.scoreonline.DriveSafe" ios-CFBundleVersion="27" version="1.7" windows-packageVersion="1.7" xmlns="http://www.w3.org/ns/widgets" xmlns:android="http://schemas.android.com/apk/res/android" xmlns:gap="http://phonegap.com/ns/1.0">
     <preference name="loglevel" value="DEBUG" />
     <feature name="Whitelist">
         <param name="android-package" value="org.apache.cordova.whitelist.WhitelistPlugin" />
@@ -44,6 +44,9 @@
     <feature name="BackgroundGeoLocation">
         <param name="android-package" value="com.tenforwardconsulting.cordova.bgloc.BackgroundGeolocationPlugin" />
     </feature>
+    <feature name="PowerManagement">
+        <param name="android-package" value="com.simplec.phonegap.plugins.powermanagement.PowerManagement" />
+    </feature>
     <preference name="android-minSdkVersion" value="15" />
     <splash density="land-hdpi" src="www/res/screen/android/drawable-land-hdpi/screen.png" />
     <splash density="land-ldpi" src="www/res/screen/android/drawable-land-ldpi/screen.png" />
@@ -59,7 +62,7 @@
     <author email="isaac@isaacmercer.nz" href="http://isaacmercer.nz">Isaac Mercer</author>
     <content src="index.html" />
     <preference name="permissions" value="none" />
-    <preference name="orientation" value="default" />
+    <preference name="orientation" value="all" />
     <preference name="target-device" value="universal" />
     <preference name="fullscreen" value="false" />
     <preference name="webviewbounce" value="false" />
@@ -77,6 +80,9 @@
     <preference name="StatusBarBackgroundColor" value="#333333" />
     <preference name="StatusBarStyle" value="lightcontent" />
     <preference name="DisallowOverscroll" value="true" />
+    <preference name="AllowInlineMediaPlayback" value="true" />
+    <preference name="BackupWebStorage" value="none" />
+    <preference name="SuppressesLongPressGesture" value="true" />
     <gap:plugin name="org.apache.cordova.battery-status" />
     <gap:plugin name="org.apache.cordova.camera" />
     <gap:plugin name="org.apache.cordova.media-capture" />
