--- a/SafeDriver/platforms/android/res/xml/config.xml
+++ b/SafeDriver/platforms/android/res/xml/config.xml
@@ -56,6 +56,12 @@
     <feature name="InAppBillingPlugin">
         <param name="android-package" value="com.smartmobilesoftware.inappbilling.InAppBillingPlugin" />
     </feature>
+    <feature name="AndroidFullScreen">
+        <param name="android-package" value="com.mesmotronic.plugins.FullScreenPlugin" />
+    </feature>
+    <feature name="YoikScreenOrientation">
+        <param name="android-package" value="net.yoik.cordova.plugins.screenorientation.YoikScreenOrientation" />
+    </feature>
     <preference name="android-minSdkVersion" value="15" />
     <splash density="land-hdpi" src="www/res/screen/android/drawable-land-hdpi/screen.png" />
     <splash density="land-ldpi" src="www/res/screen/android/drawable-land-ldpi/screen.png" />
