--- a/SafeDriver/platforms/ios/SafeDriver/Launch Screen.storyboard
+++ b/SafeDriver/platforms/ios/SafeDriver/Launch Screen.storyboard
@@ -1,9 +1,10 @@
 <?xml version="1.0" encoding="UTF-8" standalone="no"?>
-<document type="com.apple.InterfaceBuilder3.CocoaTouch.Storyboard.XIB" version="3.0" toolsVersion="10117" systemVersion="15G31" targetRuntime="iOS.CocoaTouch" propertyAccessControl="none" useAutolayout="YES" launchScreen="YES" useTraitCollections="YES" initialViewController="01J-lp-oVM">
+<document type="com.apple.InterfaceBuilder3.CocoaTouch.Storyboard.XIB" version="3.0" toolsVersion="11201" systemVersion="15G31" targetRuntime="iOS.CocoaTouch" propertyAccessControl="none" useAutolayout="YES" launchScreen="YES" useTraitCollections="YES" colorMatched="YES" initialViewController="01J-lp-oVM">
     <dependencies>
         <deployment identifier="iOS"/>
-        <plugIn identifier="com.apple.InterfaceBuilder.IBCocoaTouchPlugin" version="10085"/>
+        <plugIn identifier="com.apple.InterfaceBuilder.IBCocoaTouchPlugin" version="11161"/>
         <capability name="Aspect ratio constraints" minToolsVersion="5.1"/>
+        <capability name="documents saved in the Xcode 8 format" minToolsVersion="8.0"/>
     </dependencies>
     <scenes>
         <!--View Controller-->
@@ -15,33 +16,34 @@
                         <viewControllerLayoutGuide type="bottom" id="xb3-aO-Qok"/>
                     </layoutGuides>
                     <view key="view" contentMode="scaleToFill" id="Ze5-6b-2t3">
-                        <rect key="frame" x="0.0" y="0.0" width="600" height="600"/>
+                        <rect key="frame" x="0.0" y="0.0" width="375" height="667"/>
                         <autoresizingMask key="autoresizingMask" widthSizable="YES" heightSizable="YES"/>
                         <subviews>
                             <label opaque="NO" clipsSubviews="YES" userInteractionEnabled="NO" contentMode="left" horizontalHuggingPriority="251" verticalHuggingPriority="251" text="" textAlignment="center" lineBreakMode="tailTruncation" baselineAdjustment="alignBaselines" minimumFontSize="9" translatesAutoresizingMaskIntoConstraints="NO" id="obG-Y5-kRd">
-                                <rect key="frame" x="20" y="559" width="560" height="21"/>
                                 <fontDescription key="fontDescription" type="system" pointSize="17"/>
-                                <color key="textColor" red="0.0" green="0.0" blue="0.0" alpha="1" colorSpace="calibratedRGB"/>
+                                <color key="textColor" red="0.0" green="0.0" blue="0.0" alpha="1" colorSpace="custom" customColorSpace="sRGB"/>
                                 <nil key="highlightedColor"/>
                             </label>
-                            <imageView opaque="NO" clipsSubviews="YES" multipleTouchEnabled="YES" contentMode="center" image="icon.png" translatesAutoresizingMaskIntoConstraints="NO" id="qgE-Om-aIs">
-                                <rect key="frame" x="44" y="44" width="512" height="512"/>
+                            <imageView opaque="NO" clipsSubviews="YES" multipleTouchEnabled="YES" contentMode="center" misplaced="YES" image="icon-173-tile.png" translatesAutoresizingMaskIntoConstraints="NO" id="PPJ-Wr-IzI">
+                                <frame key="frameInset" minX="101" minY="247" width="173" height="173"/>
                                 <constraints>
-                                    <constraint firstAttribute="width" secondItem="qgE-Om-aIs" secondAttribute="height" multiplier="1:1" id="PAB-Js-AJe"/>
+                                    <constraint firstAttribute="width" secondItem="PPJ-Wr-IzI" secondAttribute="height" multiplier="1:1" id="poz-ep-91Z"/>
                                 </constraints>
                             </imageView>
                         </subviews>
-                        <color key="backgroundColor" white="1" alpha="1" colorSpace="custom" customColorSpace="calibratedWhite"/>
+                        <color key="backgroundColor" red="1" green="1" blue="1" alpha="1" colorSpace="custom" customColorSpace="sRGB"/>
                         <constraints>
-                            <constraint firstItem="qgE-Om-aIs" firstAttribute="leading" secondItem="Ze5-6b-2t3" secondAttribute="leading" constant="44" id="0FZ-at-vGc"/>
+                            <constraint firstItem="obG-Y5-kRd" firstAttribute="top" secondItem="PPJ-Wr-IzI" secondAttribute="bottom" constant="227" id="0Op-1A-k5L"/>
                             <constraint firstAttribute="centerX" secondItem="obG-Y5-kRd" secondAttribute="centerX" id="5cz-MP-9tL"/>
-                            <constraint firstItem="obG-Y5-kRd" firstAttribute="top" secondItem="qgE-Om-aIs" secondAttribute="bottom" constant="3" id="AzL-JF-Q2k"/>
-                            <constraint firstItem="qgE-Om-aIs" firstAttribute="top" secondItem="Llm-lL-Icb" secondAttribute="bottom" constant="24" id="Rpy-CZ-aZM"/>
+                            <constraint firstItem="PPJ-Wr-IzI" firstAttribute="leading" secondItem="Ze5-6b-2t3" secondAttribute="leading" constant="85" id="7BX-ay-0tj"/>
+                            <constraint firstItem="PPJ-Wr-IzI" firstAttribute="top" secondItem="Llm-lL-Icb" secondAttribute="bottom" constant="227" id="Lrz-XP-2KH"/>
                             <constraint firstItem="obG-Y5-kRd" firstAttribute="leading" secondItem="Ze5-6b-2t3" secondAttribute="leading" constant="20" symbolic="YES" id="SfN-ll-jLj"/>
                             <constraint firstAttribute="bottom" secondItem="obG-Y5-kRd" secondAttribute="bottom" constant="20" id="Y44-ml-fuU"/>
-                            <constraint firstAttribute="trailing" secondItem="qgE-Om-aIs" secondAttribute="trailing" constant="44" id="aX1-rg-jgF"/>
+                            <constraint firstAttribute="trailing" secondItem="PPJ-Wr-IzI" secondAttribute="trailing" constant="85" id="uKq-li-k3k"/>
                         </constraints>
                     </view>
+                    <freeformSimulatedSizeMetrics key="simulatedDestinationMetrics"/>
+                    <size key="freeformSize" width="375" height="667"/>
                 </viewController>
                 <placeholder placeholderIdentifier="IBFirstResponder" id="iYj-Kq-Ea1" userLabel="First Responder" sceneMemberID="firstResponder"/>
             </objects>
@@ -49,6 +51,6 @@
         </scene>
     </scenes>
     <resources>
-        <image name="icon.png" width="512" height="512"/>
+        <image name="icon-173-tile.png" width="173" height="173"/>
     </resources>
 </document>
